--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 
 	<div id="contact_box_link">
 		<div id="contact_box_link_icon">
-			<span class="fontawesome-envelope"></span>
+			<span class="envelope"><img src="img/mailbox.png"></img></span>
 		</div>
 		<div id="contact_box_link_text">
 			<div id="text_contact_button">Contact</div>
