--- a/index.html
+++ b/index.html
@@ -67,23 +67,43 @@
 			</div>
 		</div>
 		<div class="descr">
-				<p><Strong>#1 Villa In Ibiza</Strong></p><p>Villa Puig Redo is a luxury estate of 1700m2 set on three hectares of land.&nbsp;Completely refurbished in 2013, Puig Redo is located in one of the best area of Ibiza.<br>
-				A haven of peace with a&nbsp;fantastic landscape&nbsp;make you feel out of the world.</p><p><strong>Location :</strong></p><p>Halfway down to Cap Porroig in the south of Ibiza, and at less than five min. drive from San José town and Es Cubells.
-				<br>12 minutes from the international Airport. 5 minutes from the best beaches like Blue Marlin. 15 minutes from the port.</p><p><strong>More than 1700m2:</strong></p>
-				<p>- 12 double &nbsp;bedrooms (air-conditionned, WIFI, TV with over 500 channels, safety boxes)<br>
-				- 4 double &nbsp;bedrooms<strong>&nbsp;</strong>for the staff a separate area( Air-conditionned, WIFI, TV salon,&nbsp; two Kitchen)<br>
-				- 3 guest living rooms (TV with over 500 channels)<br>
-				- The house is fully&nbsp;equipped&nbsp;with domotic<br>
-				- possibility to land with an helicopter.<br>
-				- Lounge area (underfloor heating),Bar,Professional musical equipment 700 watt.<br>
-				- 3 kitchen ( 16 industrial refrigerator, 3 ice cube machine, full professional kitchen machines)<br>
-				- pool (heating and lightening)<br>
-				- tennis court (night lightening)<br>
-				- gym with an amazing view on the sea and Formentera island (equipped with the new generation machines from Technogym)<br>
-				- petanque court<br>
-				- parking up to 20 cars<br>
-				- Big park with more than 100 different types of plants.</p><p>Contemporary interior Decor by Philippe Starck, Ron Arad, Kartel, B&amp;B. Some important works of contemporary arts are present.</p><p><strong>Security.</strong></p><p>The property is surrounded by 1km of concrete wall and the building is alarmed.<br>
-				Bodyguards on request.
+				<p><Strong>#1 Villa In Ibiza</Strong></p>
+				<p>Villa Puig Redo is a luxury estate of 1700m2 set on three hectares of beautifull landscapes. Completely refurbished in 2013, Puig Redo is located in one of the best area of Ibiza.<br>
+				A haven of peace with a fantastic atmosphere makes you feel out of the world.</p>
+				<p><strong>Location:</strong></p>
+				<p>Halfway down to Cap Porroig in the south of Ibiza, and less than 5 minutes far from San José town and Es Cubells, 12 minutes from the international Airport, 5 minutes from the best beaches like Blue Marlin and 15 minutes from the port.</p>
+				<p><strong>More than 1700m2:</strong></p>
+				<p><span class="fontawesome-angle-right"></span> 10 double bedrooms<br>
+				<span class="littleinfos">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(air-conditionned, WIFI, TV with over 500 channels, safety boxes)</span><br>
+				<span class="fontawesome-angle-right"></span> 4 double bedrooms for the staff in a separate area<br>
+				<span class="littleinfos">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(air-conditionned, WIFI, TV salon, two Kitchen)</span><br>
+				<span class="fontawesome-angle-right"></span> 3 guest living rooms<br>
+				<span class="littleinfos">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(TV with over 500 channels)</span><br>
+				<span class="fontawesome-angle-right"></span> The house is fully equipped with domotic.<br>
+				<span class="padding">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><br>
+				<span class="fontawesome-angle-right"></span> Ability to land with an helicopter.<br>
+				<span class="padding">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><br>
+				<span class="fontawesome-angle-right"></span> lounge area<br>
+				<span class="littleinfos">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(underfloor heating, bar, professional musical equipment)</span><br>
+				<span class="fontawesome-angle-right"></span> 3 kitchen<br>
+				<span class="littleinfos">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(16 industrial refrigerators, 3 ice cube machines, full professional kitchen machines)</span><br>
+				<span class="fontawesome-angle-right"></span> pool<br>
+				<span class="littleinfos">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(heating and lightening)</span><br>
+				<span class="fontawesome-angle-right"></span> tennis court<br>
+				<span class="littleinfos">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(night lightening)</span><br>
+				<span class="fontawesome-angle-right"></span> gym with an amazing view on the sea and Formentera island<br>
+				<span class="littleinfos">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(equipped with a new generation equipement from Technogym)</span><br>
+				<span class="fontawesome-angle-right"></span> petanque court<br>
+				<span class="padding">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><br>
+				<span class="fontawesome-angle-right"></span> parking up to 20 cars<br>
+				<span class="padding">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><br>
+				<span class="fontawesome-angle-right"></span> big park with more than 100 different types of plants</p>
+				<p><strong>Design:</strong></p>
+				<p>Contemporary interior Decor by Philippe Starck, Ron Arad, Kartel, B&amp;B. Some important pieces of contemporary arts are present.</p>
+				<p><strong>Security:</strong></p>
+				<p><span class="fontawesome-angle-right"></span> The property is surrounded by 1km of concrete wall and the building is alarmed.<br>
+				<span class="padding">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><br>
+				<span class="fontawesome-angle-right"></span> Bodyguards on request.
 				</p>
 		</div>
 
