--- a/index.html
+++ b/index.html
@@ -360,18 +360,27 @@
 				</a>
 			</div>
 		</div>
-		<div class="descr">
+		<div class="services">
 			<p>
-				- Property manager<br>
-				- Michelin awarded Chef<br>
-				- Waiters<br>
-				- Two housekeepers (more on request)<br>
-				- Gardeners<br>
-				- Bodyguards (on request)<br>
-				- Massage and beauty services at the villa (on request)<br>
-				- Tennis, fitness and swimming coach (on request)<br>
-				- Car driver (on request)<br><br>
-				Puig Redo owned a yacht and can organise sea tours (on request)
+				<span class="fontawesome-angle-right"></span> Property manager<br>
+				<br>
+				<span class="fontawesome-angle-right"></span> Michelin awarded Chef<br>
+				<br>
+				<span class="fontawesome-angle-right"></span> Waiters<br>
+				<br>
+				<span class="fontawesome-angle-right"></span> Two housekeepers (more on request)<br>
+				<br>
+				<span class="fontawesome-angle-right"></span> Gardeners<br>
+				<br>
+				<span class="fontawesome-angle-right"></span> Bodyguards (on request)<br>
+				<br>
+				<span class="fontawesome-angle-right"></span> Massage and beauty services at the villa (on request)<br>
+				<br>
+				<span class="fontawesome-angle-right"></span> Tennis, fitness and swimming coach (on request)<br>
+				<br>
+				<span class="fontawesome-angle-right"></span> Car driver (on request)<br>
+				<br>
+				<span class="fontawesome-angle-right"></span> Puig Redo owned a yacht and can organise sea tours (on request)
 			</p>
 		</div>
 	</div>
