--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <link rel="stylesheet" href="css/jquery.fancybox.css" type="text/css" media="all">
 </head>
 <body>
-<div class='all'>	
+<div class='all' id="website" style="display:none">	
 	<nav class='menu'>
 		<ul>
 			<li id='home_link'>Home</li>
