--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 		</div>
 	</div>
 	<div class='contactlang'>
-		<p>Feel free to contact us in these following language:</p>
+		<p>Feel free to contact us in these following languages:</p>
 		<div class='drap'>
 			<img src="img/lang/en.png">&nbsp;
 			<img src="img/lang/es.png">&nbsp;
