--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>Villa Rent Ibiza - Puig Redo</title>
+<title>Villa Ibiza - Puig Redo</title>
 
 <meta name="description" content="Villa Renting Ibiza near San José - The most exclusive villa in Ibiza">
 <meta http-equiv="content-type" content="text/html;charset=UTF-8">
